[package]
name = "networked-pong-rs"
version = "0.1.0"
authors = ["Damian Grüner (Dreamykass) <grunerdamian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.8"
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
rand = { version= "0.8.4", features = ["std", "std_rng"] }
quinn = "0.7.2"
rustls = { version = "*" , features = ["dangerous_configuration", "quic"] }
webpki = "*"
futures = "*"
tokio = {version = "*",  features = ["full"] }
anyhow = "1.0.43"
rcgen = "0.8.13"
serde = { version = "1.0.118", features = ["derive"]  }
bincode = "1.3.1"
